pushing first content

--- a/index.html
+++ b/index.html
@@ -15,93 +15,21 @@
   <!--link rel="preload" href="Fraunces.woff2" as="font" type="font/woff2" crossorigin="anonymous"-->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/store.css">
+  <link rel="stylesheet" href="css/marketplace.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/splash.css">
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/frontsection.css">
 
 </head>
 
 <body class="home">
-  <div id="app-container">
-          <header class="topmatter">
-              <nav>
-                  <a href="/www/index.html">Home</a>
-                  <a href="/www/store.html">Store</a>
-                  <a href="/www/contact.html">Contact</a>
-                  <a href="/www/login.html">Login</a>
-              </nav>
-          </header>
-    <!--header class="topmatter">
-      <nav id="site-navbar" class="nav nav__burger">
-        <span class="nav__container">
-        <label class="burger__button" for="burger-input">
-          |||
-        </label>
-        <span class="nav__dropdown">
-          <a class="nav__option" href="/www/index.html">Home</a>
-          <a class="nav__option" href="/www/store.html">Projects</a>
-          <a class="nav__option" href="/www/contact.html">Contact</a>
-          <a class="nav__option" href="/www/about.html">About</a>
-        </span>
-        </span>
-      </nav>
-    </header-->
-  
-      <section class="splash-screen">
-        <!--h1 class="splash-title">F***&nbsp;&nbsp;You We&nbsp;&nbsp;Brew&nbsp;&nbsp;Beer Bitch</h1-->
-        <h1 class="splash-title">Coalition Brewing</h1>
-        <aside>
-          <p>Brings to you brought to you values.</p>
-          <quote>All good best commitment quality.</quote>
-        </aside>
-      </section>
-    <main class="frontpage">
-  
-      <nav class="main nav">
-        <ul class="nav list">
-            <li class="nav-list-item nav item list"> <a  data-contents="About"   href="#About"></a></li>
-            <li class="nav-list-item nav item list"> <a  data-contents="Projects"href="#Projects"></a></li>
-            <li class="nav-list-item nav item list"> <a  data-contents="Plan"    href="#Plans"></a></li> 
-            <li class="nav-list-item nav item list"> <a  data-contents="Contact" href="#Contact"></a></li>
-        </ul>
-      </nav>
-  
-      <article class="frontpage">
-        <section class="lead"  id="Lead" data-role="card">
-          <div class="brews" role="img">🍺</div>
-          <div role="presentation">
-            <h4>Big Deal</h4>
-            <quote>Award winning.</quote>
-            <p>Described by many as the best drink they've had since thier first taste of freedom.</p>
-            <button role="button" class="card-button">Find out</button>
-          </div>
-        </section>
-        <section class="about"    id="About"    data-section="About"    >
-          <h3 data-title="About"    class="frontpage article"></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eget magna suscipit, porta quam nec, lacinia urna. Morbi efficitur arcu et leo lobortis auctor. Aenean suscipit placerat elit elementum tincidunt. Vestibulum dapibus eget sem porta volutpat. Proin euismod auctor dignissim. Fusce quis orci efficitur, sagittis metus at, porttitor nibh. Phasellus ac ante viverra, tempor metus quis, convallis nisl. Donec magna mauris, vehicula eget neque quis, consectetur ultrices libero. Curabitur euismod lorem metus, a ornare tortor tempus ut. Nunc luctus efficitur arcu, et egestas sem suscipit dictum. Cras felis ipsum, tincidunt id nunc sit amet, consectetur pulvinar leo.</p>
-          <p>Ponec consequat, augue sed fermentum egestas, ipsum neque euismod purus, ac ornare nisi dui at lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus condimentum, erat in eleifend porttitor, lectus libero rutrum risus, eget molestie leo nibh non arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus maximus dui imperdiet volutpat. Sed nec luctus neque, eget egestas velit. In condimentum ex a venenatis fermentum. Sed ac venenatis ex, at vulputate ante. Proin mattis cursus commodo. Morbi ornare posuere ligula a maximus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean tempus scelerisque mauris.</p>
-        </section>
-        <section class="projects" id="Projects" data-section="Projects" >
-          <h3 data-title="Projects" class="frontpage article"></h3>
-          <p> Nulla facilisi. Pellentesque quis lacus sed massa ultrices pellentesque ut ac sem. Aenean accumsan id nunc vel faucibus. Praesent ex justo, pretium sed fringilla vitae, sollicitudin ut dui. Phasellus sit amet erat ipsum. Nullam eget hendrerit purus. Donec sodales faucibus sem, sit amet euismod libero egestas et. Proin vulputate quis justo a vestibulum. Nunc pellentesque finibus elit nec viverra. Integer accumsan tellus a imperdiet venenatis. Suspendisse ultricies, nisl quis pretium lobortis, elit justo feugiat turpis, quis vulputate diam odio ac tellus. Maecenas a tempor elit.  </p>
-        </section>
-        <section class="plans"    id="Plans"    data-section="Plans"    >
-          <h3 data-title="Plans"    class="frontpage article"></h3>
-          <p> Nulla ut augue enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam pellentesque mattis neque, faucibus cursus turpis posuere quis. Integer augue nisi, dapibus eget ex vel, laoreet molestie eros. Nam quis nisl elementum, volutpat orci sit amet, sagittis enim. Phasellus elementum sapien eget lorem hendrerit rhoncus. Morbi condimentum sit amet urna ut mattis. Praesent feugiat metus non urna tempus maximus. Aenean condimentum leo felis, vitae varius sapien blandit id.</p>
-          <p> Curabitur id dui sodales, cursus massa ut, consectetur justo. Ut vulputate et mi non feugiat. Mauris non ex neque. Sed id vehicula ex. Nulla pulvinar lorem massa, suscipit ullamcorper felis finibus a. Proin justo eros, elementum eu consectetur ac, viverra quis turpis. Donec luctus justo in laoreet bibendum. Donec vehicula, ligula vitae dictum rutrum, massa lorem aliquam tellus, ac varius dolor nunc sed mauris. In hac habitasse platea dictumst. Duis gravida laoreet tempus. Integer consequat nisi pharetra arcu placerat accumsan.  </p>
-          <p> Ut a cursus nulla. Proin ante neque, feugiat eu augue sit amet, cursus hendrerit tortor. Nam non orci vestibulum, tincidunt odio sed, viverra est. Sed id libero vitae neque mollis porttitor ut eget augue. Phasellus ullamcorper sem a urna placerat, vel tincidunt purus imperdiet. Etiam consectetur libero vel quam vulputate, consequat finibus augue viverra. Cras molestie lorem quis mauris fermentum, sit amet imperdiet felis aliquam. Vivamus eu felis urna.</p>
-        </section>
-        <section class="contact"  id="Contact"  data-section="Contact"  >
-          <h3 data-title="Contact"  class="frontpage article"></h3>
-          <p> Etiam urna nisi, efficitur vitae dapibus congue, vestibulum sit amet ligula.  </p>
-        </section>
-      </article>
-    </main>
-  
-    <footer>KCACP (c) 2021</footer>
-    <a href="#Top" class="goto-top"></a>
-    <script src="js/main.js"></script>
-  </div>
+  <div id="app-container"></div>
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+  <script src="build/index.bundle.js"></script>
+  <script src="js/store.script.js"></script>
 </body>
 </html>
