added some effects, tweaks, and dialogs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body class="home">
+<body class="home" id="app-body">
   <div id="app-container"></div>
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
