adding fixes to dialog

--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
   <link rel="stylesheet" href="css/splash.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/frontsection.css">
-
-</head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJTCN6431L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-JJTCN6431L');
+  </script>
+  </head>
 
 <body class="home" id="app-body">
   <div id="app-container"></div>
