--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="css/splash.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/frontsection.css">
+  <link rel="stylesheet" href="css/simulation.module.css">
 
 </head>
 
